remove spacing in favour of correcting o-layout

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -42,26 +42,7 @@ iframe {
 }
 
 table.o-manifest__table {
-	// border-collapse: collapse;
-
-	// tr {
-	// 	background-color: #f2f2f2;
-
-	// 	th {
-	// 		text-align: right;
-	// 		padding: 0.3em 0 0.3em 0.4em;
-	// 	}
-
-	// 	td {
-	// 		padding: 0.3em;
-	// 	}
-	// }
 	width: auto;
-}
-
-.o-manifest__example {
-	width: 100%;
-	margin-top: 0;
 }
 
 .o-website__hero--home {
